Adds 'componentProperties' option to 'spo spfx' commands. Closes #5975

--- a/docs/docs/cmd/spo/commandset/commandset-get.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-get.mdx
@@ -29,6 +29,9 @@ m365 spo commandset get [options]
 
 `-s, --scope [scope]`
 : Scope of the ListView Command Set. Allowed values: `Site`, `Web`, `All`. Defaults to `All`.
+
+`-p, --clientSideComponentProperties`
+: Only output the client-side component properties.
 ```
 
 <Global />
@@ -50,7 +53,7 @@ m365 spo commandset get --title "Some customizer" --webUrl https://contoso.share
 Retrieves a ListView Command Set by id with scope 'Web'.
 
 ```sh
-m365 spo commandset get --id 14125658-a9bc-4ddf-9c75-1b5767c9a337 --webUrl https://contoso.sharepoint.com/sites/sales -scope Web
+m365 spo commandset get --id 14125658-a9bc-4ddf-9c75-1b5767c9a337 --webUrl https://contoso.sharepoint.com/sites/sales --scope Web
 ```
 
 Retrieves a ListView Command Set by clientSideComponentId with scope 'Site'.
@@ -59,23 +62,31 @@ Retrieves a ListView Command Set by clientSideComponentId with scope 'Site'.
 m365 spo commandset get --clientSideComponentId c1cbd896-5140-428d-8b0c-4873be19f5ac --webUrl https://contoso.sharepoint.com/sites/sales --scope Site
 ```
 
+Retrieves the client-side component properties of a ListView Command Set.
+
+```sh
+m365 spo commandset get --id 14125658-a9bc-4ddf-9c75-1b5767c9a337 --webUrl https://contoso.sharepoint.com/sites/sales -clientSideComponentProperties
+```
+
 ## Response
+
+### Standard response
 
 <Tabs>
   <TabItem value="JSON">
 
   ```json
   {
-    "ClientSideComponentId": "c1cbd896-5140-428d-8b0c-4873be19f5ac",
+    "ClientSideComponentId": "53dd6a38-1461-44e0-9bf0-14883316a316",
     "ClientSideComponentProperties": "{\"sampleTextOne\":\"One item is selected in the list.\", \"sampleTextTwo\":\"This command is always visible.\"}",
     "CommandUIExtension": null,
     "Description": null,
     "Group": null,
     "HostProperties": "",
-    "Id": "9a0674de-2f3d-4a26-ba79-62b460ddd327",
+    "Id": "bb26547d-c9b7-4ed1-b793-00cbe53388d6",
     "ImageUrl": null,
     "Location": "ClientSideExtension.ListViewCommandSet.CommandBar",
-    "Name": "{9a0674de-2f3d-4a26-ba79-62b460ddd327}",
+    "Name": "{bb26547d-c9b7-4ed1-b793-00cbe53388d6}",
     "RegistrationId": "100",
     "RegistrationType": 1,
     "Rights": {
@@ -86,7 +97,7 @@ m365 spo commandset get --clientSideComponentId c1cbd896-5140-428d-8b0c-4873be19
     "ScriptBlock": null,
     "ScriptSrc": null,
     "Sequence": 65536,
-    "Title": "Notification",
+    "Title": "HelloWorld",
     "Url": null,
     "VersionOfUserCustomAction": "1.0.1.0"
   }
@@ -96,16 +107,16 @@ m365 spo commandset get --clientSideComponentId c1cbd896-5140-428d-8b0c-4873be19
   <TabItem value="Text">
 
   ```text
-  ClientSideComponentId        : c1cbd896-5140-428d-8b0c-4873be19f5ac
+  ClientSideComponentId        : 53dd6a38-1461-44e0-9bf0-14883316a316
   ClientSideComponentProperties: {"sampleTextOne":"One item is selected in the list.", "sampleTextTwo":"This command is always visible."}
   CommandUIExtension           : null
   Description                  : null
   Group                        : null
   HostProperties               :
-  Id                           : 9a0674de-2f3d-4a26-ba79-62b460ddd327
+  Id                           : bb26547d-c9b7-4ed1-b793-00cbe53388d6
   ImageUrl                     : null
   Location                     : ClientSideExtension.ListViewCommandSet.CommandBar
-  Name                         : {9a0674de-2f3d-4a26-ba79-62b460ddd327}
+  Name                         : {bb26547d-c9b7-4ed1-b793-00cbe53388d6}
   RegistrationId               : 100
   RegistrationType             : 1
   Rights                       : {"High":"0","Low":"0"}
@@ -113,7 +124,7 @@ m365 spo commandset get --clientSideComponentId c1cbd896-5140-428d-8b0c-4873be19
   ScriptBlock                  : null
   ScriptSrc                    : null
   Sequence                     : 65536
-  Title                        : Notification
+  Title                        : HelloWorld
   Url                          : null
   VersionOfUserCustomAction    : 1.0.1.0
   ```
@@ -122,39 +133,79 @@ m365 spo commandset get --clientSideComponentId c1cbd896-5140-428d-8b0c-4873be19
   <TabItem value="CSV">
 
   ```csv
-  ClientSideComponentId,ClientSideComponentProperties,CommandUIExtension,Description,Group,HostProperties,Id,ImageUrl,Location,Name,RegistrationId,RegistrationType,Rights,Scope,ScriptBlock,ScriptSrc,Sequence,Title,Url,VersionOfUserCustomAction
-  c1cbd896-5140-428d-8b0c-4873be19f5ac,"{""sampleTextOne"":""One item is selected in the list."", ""sampleTextTwo"":""This command is always visible.""}",,,,,9a0674de-2f3d-4a26-ba79-62b460ddd327,,ClientSideExtension.ListViewCommandSet.CommandBar,{9a0674de-2f3d-4a26-ba79-62b460ddd327},100,1,"{""High"":""0"",""Low"":""0""}",3,,,65536,Notification,,1.0.1.0
+  ClientSideComponentId,ClientSideComponentProperties,CommandUIExtension,Description,Group,HostProperties,Id,ImageUrl,Location,Name,RegistrationId,RegistrationType,Scope,ScriptBlock,ScriptSrc,Sequence,Title,Url,VersionOfUserCustomAction
+  53dd6a38-1461-44e0-9bf0-14883316a316,"{""sampleTextOne"":""One item is selected in the list."", ""sampleTextTwo"":""This command is always visible.""}",,,,,bb26547d-c9b7-4ed1-b793-00cbe53388d6,,ClientSideExtension.ListViewCommandSet.CommandBar,{bb26547d-c9b7-4ed1-b793-00cbe53388d6},100,1,3,,,65536,HelloWorld,,1.0.1.0
   ```
 
   </TabItem>
   <TabItem value="Markdown">
 
   ```md
-  # spo commandset get --webUrl "https://contoso.sharepoint.com/sites/sales" --id "9a0674de-2f3d-4a26-ba79-62b460ddd327"
+  # spo commandset get --webUrl "https://contoso.sharepoint.com/sites/sales" --id "bb26547d-c9b7-4ed1-b793-00cbe53388d6"
 
-  Date: 27/02/2023
+  Date: 16/05/2024
 
-  ## Notification (9a0674de-2f3d-4a26-ba79-62b460ddd327)
+  ## HelloWorld (bb26547d-c9b7-4ed1-b793-00cbe53388d6)
 
   Property | Value
   ---------|-------
-  ClientSideComponentId | c1cbd896-5140-428d-8b0c-4873be19f5ac
-  CommandUIExtension | null
-  Description | null
-  Group | null
+  ClientSideComponentId | 53dd6a38-1461-44e0-9bf0-14883316a316
+  ClientSideComponentProperties | {"sampleTextOne":"One item is selected in the list.", "sampleTextTwo":"This command is always visible."}
   HostProperties |
-  Id | 9a0674de-2f3d-4a26-ba79-62b460ddd327
-  ImageUrl | null
+  Id | bb26547d-c9b7-4ed1-b793-00cbe53388d6
   Location | ClientSideExtension.ListViewCommandSet.CommandBar
+  Name | {bb26547d-c9b7-4ed1-b793-00cbe53388d6}
   RegistrationId | 100
   RegistrationType | 1
   Scope | 3
-  ScriptBlock | null
-  ScriptSrc | null
   Sequence | 65536
-  Title | Notification
-  Url | null
+  Title | HelloWorld
   VersionOfUserCustomAction | 1.0.1.0
+  ```
+
+  </TabItem>
+</Tabs>
+
+### `clientSideComponentProperties` response
+
+<Tabs>
+  <TabItem value="JSON">
+
+  ```json
+  {
+    "sampleTextOne": "One item is selected in the list.",
+    "sampleTextTwo": "This command is always visible."
+  }
+  ```
+
+  </TabItem>
+  <TabItem value="Text">
+
+  ```txt
+  sampleTextOne: One item is selected in the list.
+  sampleTextTwo: This command is always visible.
+  ```
+
+  </TabItem>
+  <TabItem value="CSV">
+
+  ```csv
+  sampleTextOne,sampleTextTwo
+  One item is selected in the list.,This command is always visible.
+  ```
+
+  </TabItem>
+  <TabItem value="Markdown">
+
+  ```md
+  # spo commandset get --webUrl "https://contoso.sharepoint.com/sites/sales" --id "9a0674de-2f3d-4a26-ba79-62b460ddd327" --clientSideComponentProperties "true"
+
+  Date: 15/05/2024
+
+  Property | Value
+  ---------|-------
+  sampleTextOne | One item is selected in the list.
+  sampleTextTwo | This command is always visible.
   ```
 
   </TabItem>
