--- a/docs/docs/cmd/entra/user/user-groupmembership-list.mdx
+++ b/docs/docs/cmd/entra/user/user-groupmembership-list.mdx
@@ -63,9 +63,15 @@ m365 entra user groupmembership list --userName '@meUserName'
 
   ```json
   [
-    "01b62bc5-9701-4f93-9587-9d1ea58a086d",
-    "619701a2-4bdc-494a-a9dd-9d3aeebcafd9",
-    "ec98d904-ac8c-49f0-99e1-c9c0e1a1e453"
+    {
+      "groupId": "01b62bc5-9701-4f93-9587-9d1ea58a086d"
+    },
+    {
+      "groupId": "619701a2-4bdc-494a-a9dd-9d3aeebcafd9"
+    },
+    {
+      "groupId": "ec98d904-ac8c-49f0-99e1-c9c0e1a1e453"
+    }
   ]
   ```
 
@@ -73,6 +79,8 @@ m365 entra user groupmembership list --userName '@meUserName'
   <TabItem value="Text">
 
   ```text
+  groupId
+  ------------------------------------
   01b62bc5-9701-4f93-9587-9d1ea58a086d
   619701a2-4bdc-494a-a9dd-9d3aeebcafd9
   ec98d904-ac8c-49f0-99e1-c9c0e1a1e453
@@ -82,6 +90,7 @@ m365 entra user groupmembership list --userName '@meUserName'
   <TabItem value="CSV">
 
   ```csv
+  groupId
   01b62bc5-9701-4f93-9587-9d1ea58a086d
   619701a2-4bdc-494a-a9dd-9d3aeebcafd9
   ec98d904-ac8c-49f0-99e1-c9c0e1a1e453
@@ -91,23 +100,22 @@ m365 entra user groupmembership list --userName '@meUserName'
   <TabItem value="Markdown">
 
   ```md
-  01b62bc5-9701-4f93-9587-9d1ea58a086d
-  619701a2-4bdc-494a-a9dd-9d3aeebcafd9
-  ec98d904-ac8c-49f0-99e1-c9c0e1a1e453
+  # entra user groupmembership list --userId "1f5595b2-aa07-445d-9801-a45ea18160b2"
+
+  Date: 5/17/2024
+
+  Property | Value
+  ---------|-------
+  groupId | 01b62bc5-9701-4f93-9587-9d1ea58a086d
+
+  Property | Value
+  ---------|-------
+  groupId | 619701a2-4bdc-494a-a9dd-9d3aeebcafd9
+
+  Property | Value
+  ---------|-------
+  groupId | ec98d904-ac8c-49f0-99e1-c9c0e1a1e453
   ```
 
   </TabItem>
 </Tabs>
-
-
-
-
-
-
-
-
-
-
-
-
-
