Comments from pr-checklist

--- a/docs/docs/contribute/pr-checklist.mdx
+++ b/docs/docs/contribute/pr-checklist.mdx
@@ -26,7 +26,7 @@ This document outlines the requirements for submitting a pull request (PR) to th
 - [ ] Handle failed promises properly when `responseType: 'json'` is used by using `handleRejectedODataJsonPromise`.
 - [ ] Escape user input in XML and URLs.
 - [ ] Verbose and debug outputs are logged to stdErr (`logger.logToStderr` instead of `logger.log`).
-- [ ] Do not do conditional output in JSON output mode; use `defaultProperties` for definining default properties.
+- [ ] Do not do conditional output in JSON output mode; use `defaultProperties` for defining default properties.
 - [ ] For commands with multiple options where the user is required to choose one, define these options using an `optionSet` without specific validation logic in the command's validate method.
 - [ ] Use `async/await` instead of `promise/then`.
 - [ ] When working with `spo` commands, use `GetFileByServerRelativePath` and `GetFolderByServerRelativePath` API endpoint instead of `GetFileByServerRelativeUrl` and `GetFolderByServerRelativeUrl`.
@@ -40,3 +40,4 @@ This document outlines the requirements for submitting a pull request (PR) to th
 - [ ] Ensure samples use long names of options rather than short ones.
 - [ ] Include the marker to incorporate global options rather than listing them explicitly.
 - [ ] Check for no warnings when building docs (lines that begin with `WARNING - `).
+- [ ] If there is an option modifying the output, include responses for both default and modified output.
