--- a/docs/docs/cmd/spo/tenant/tenant-recyclebinitem-restore.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-recyclebinitem-restore.mdx
@@ -16,21 +16,19 @@ m365 spo tenant recyclebinitem restore [options]
 
 ```md definition-list
 `-u, --siteUrl <siteUrl>`
-: URL of the site to restore
+: URL of the site.
 
 `--wait`
-: Wait for the site collection to be restored before completing the command
+: (deprecated) Wait for the site collection to be restored before completing the command.
 ```
 
 <Global />
 
 ## Remarks
 
-Restoring deleted site collections is by default asynchronous and depending on the current state of Microsoft 365, might take up to few minutes. If you're building a script with steps that require the site to be fully restored, you should use the `--wait` flag. When using this flag, the `spo tenant recyclebinitem restore` command will keep running until it received confirmation from Microsoft 365 that the site has been fully restored.
-
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be a Global or SharePoint administrator.
 
 :::
     
@@ -40,12 +38,6 @@ Restore a deleted site collection from tenant recycle bin
 
 ```sh
 m365 spo tenant recyclebinitem restore --siteUrl https://contoso.sharepoint.com/sites/team
-```
-
-Restore a deleted site collection from tenant recycle bin and wait for completion
-
-```sh
-m365 spo tenant recyclebinitem restore --siteUrl https://contoso.sharepoint.com/sites/team --wait
 ```
 
 ## Response
