Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,24 @@ sidebar_position: 4
 
 # Release notes
 
+## v7.9.0 (beta)
+
+### New commands
+
+**Entra ID:**
+
+- [entra group user set](../cmd/entra/group/group-user-set.mdx) - updates role of users in an Entra group [#5473](https://github.com/pnp/cli-microsoft365/issues/5473)
+- [entra user groupmembership list](../cmd/entra/user/user-groupmembership-list.mdx) - retrieves all groups where the user is a member of [#5904](https://github.com/pnp/cli-microsoft365/issues/5904)
+
+**global:**
+
+- [search](../cmd/search.mdx) - use Microsoft Search [#5344](https://github.com/pnp/cli-microsoft365/issues/5344)
+
+### Changes
+
+- added doc page 'pr checklist' [#5533](https://github.com/pnp/cli-microsoft365/issues/5533)
+- added support for gulp-cli v3 in 'spfx doctor' command [#6045](https://github.com/pnp/cli-microsoft365/issues/6045)
+
 ## [v7.8.1](https://github.com/pnp/cli-microsoft365/releases/tag/v7.8.1)
 
 ### Changes
