--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -360,6 +360,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'jwaegebaert'
   },
   {
+    name: 'Jason Mok',
+    company: '',
+    github: 'jasonmokk',
+    x: ''
+  },
+  {
     name: 'Jayakumar Balasubramaniam',
     company: 'Hubfly',
     github: 'JayakumarB',
