Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -13,14 +13,22 @@ sidebar_position: 4
 - [entra group user set](../cmd/entra/group/group-user-set.mdx) - updates role of users in an Entra group [#5473](https://github.com/pnp/cli-microsoft365/issues/5473)
 - [entra user groupmembership list](../cmd/entra/user/user-groupmembership-list.mdx) - retrieves all groups where the user is a member of [#5904](https://github.com/pnp/cli-microsoft365/issues/5904)
 
-**global:**
+**Global:**
 
 - [search](../cmd/search.mdx) - use Microsoft Search [#5344](https://github.com/pnp/cli-microsoft365/issues/5344)
+
+**Viva:**
+
+- [viva engage community get](../cmd/viva/engage/engage-community-get.mdx) - gets information of a Viva Engage community [#5754](https://github.com/pnp/cli-microsoft365/issues/5754)
 
 ### Changes
 
 - added doc page 'pr checklist' [#5533](https://github.com/pnp/cli-microsoft365/issues/5533)
 - added support for gulp-cli v3 in 'spfx doctor' command [#6045](https://github.com/pnp/cli-microsoft365/issues/6045)
+- added more properties to output of [entra user list](../cmd/entra/user/user-list.mdx) command [#4667](https://github.com/pnp/cli-microsoft365/issues/4667)
+- added application permissions check on certain commands [#4054](https://github.com/pnp/cli-microsoft365/issues/4054)
+- fixed error when specifying empty SharePoint URL [#6012](https://github.com/pnp/cli-microsoft365/issues/6012)
+- fixed restoring team site group for command [spo tenant recyclebinitem restore](../cmd/spo/tenant/tenant-recyclebinitem-restore.mdx) [#6021](https://github.com/pnp/cli-microsoft365/issues/6021)
 
 ## [v7.8.1](https://github.com/pnp/cli-microsoft365/releases/tag/v7.8.1)
 
