Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,19 @@ sidebar_position: 4
 
 # Release notes
 
+## v7.10.0 (beta)
+
+### New commands
+
+**Entra ID**
+
+- [entra pim role assignment eligibility list](../cmd/entra/pim/pim-role-assignment-eligibility-list.mdx) - retrieves a list of eligible roles a user or group can be assigned to [#5783](https://github.com/pnp/cli-microsoft365/issues/5783)
+- [entra pim role request list](../cmd/entra/pim/pim-role-request-list.mdx) - retrieves a list of PIM requests for roles [#5781](https://github.com/pnp/cli-microsoft365/issues/5781)
+
+### Changes
+
+- added option 'ensureParentFolders' to [spo folder add](../cmd/spo/folder/folder-add.mdx) command [#5887](https://github.com/pnp/cli-microsoft365/issues/5887)
+
 ## [v7.9.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.9.0)
 
 ### New commands
