Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -12,10 +12,20 @@ sidebar_position: 4
 
 - [entra pim role assignment eligibility list](../cmd/entra/pim/pim-role-assignment-eligibility-list.mdx) - retrieves a list of eligible roles a user or group can be assigned to [#5783](https://github.com/pnp/cli-microsoft365/issues/5783)
 - [entra pim role request list](../cmd/entra/pim/pim-role-request-list.mdx) - retrieves a list of PIM requests for roles [#5781](https://github.com/pnp/cli-microsoft365/issues/5781)
+- [entra app permission remove](../cmd/entra/app/app-permission-remove.mdx) - removes the specified application and/or delegated permissions from a specified Entra app. [#5691](https://github.com/pnp/cli-microsoft365/issues/5691)
+
+**Teams:**
+
+- [teams user app upgrade](../cmd/teams/user/user-app-upgrade.mdx) - upgrades an app in the personal scope of the specified user [#5705](https://github.com/pnp/cli-microsoft365/issues/5705)
 
 ### Changes
 
 - added option 'ensureParentFolders' to [spo folder add](../cmd/spo/folder/folder-add.mdx) command [#5887](https://github.com/pnp/cli-microsoft365/issues/5887)
+- fixed logging in to USGov [#6093](https://github.com/pnp/cli-microsoft365/issues/6093)
+- fixed duplicate white line in help page [#6071](https://github.com/pnp/cli-microsoft365/issues/6071)
+- fixed chili response behavior [#5987](https://github.com/pnp/cli-microsoft365/issues/5987)
+- fixed 'spo file add' check-in issue [#6011](https://github.com/pnp/cli-microsoft365/issues/6011)
+- fixed 'm365 status' command docs
 
 ## [v7.9.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.9.0)
 
