--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -432,6 +432,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'lee_ford'
   },
   {
+    name: 'Lovy Jain',
+    company: '',
+    github: 'lovyjain',
+    x: ''
+  },
+  {
     name: 'Luise Freese',
     company: 'M365 Princess',
     github: 'LuiseFreese',
